[P4ADEV-4252] redirect checkout API
